2000-12-11  Alexander Larsson  <alexl@redhat.com>

	* docs/README.linux-fb (GDK_KEYBOARD_TYPE):
	Clearified the difference between the keyboard types. Wrote a note
	about the magic sysrq key to get out of raw mode.

2000-12-09  James Henstridge  <james@daa.com.au>

	* gdk/linux-fb/gdkmouse-fb.c (GdkFBMouseDevice): add prot struct
	member to hold masks for detecting the start of a protocol packet.
	(mouse_devs): add packet start masks for ps2 and ms device types.
	Left the mask for fidmour blank, as I have no idea what it should
	be.
	(handle_mouse_io): skip bytes until we get to the start of a
	packet.  My Logitech mouse seems to be passing an extra NULL pad
	byte, and GPM does a similar thing here.
	(gdk_fb_mouse_ms_open): changed error message to not say psaux, as
	this is the ms mouse driver.
	(gdk_fb_mouse_ms_packet): fix up button handling, which was
	completely broken except for button1.  It was checking the wrong
	bit in the packet for the status of the right mouse button, and
	wrongly assuming right == button2 rather than 3.  I fixed that and
	also added support for middle button (button2).

2000-12-08  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextbtree.c (gtk_text_btree_insert): fix breakage here
	that cause a segfault on text insertion

	* gtk/gtktextchild.c (gtk_text_child_anchor_queue_resize): fix 
	warning

	* gtk/gtktextiter.c (test_log_attrs): use
	_gtk_text_buffer_get_line_log_attrs to speed things up a bit

	* gtk/gtktextbuffer.c (_gtk_text_buffer_get_line_log_attrs): 
	Get log attrs for a line, using a cache stored on the buffer
	
	* gtk/gtkcolorsel.h (GTK_COLOR_SELECTION_GET_CLASS): fix typo,
	reported by Jeff Franks

2000-12-08  Alexander Larsson  <alla@lysator.liu.se>

	* gdk/linux-fb/gdkmouse-fb.c (gdk_fb_mouse_ms_open):
	/dev/ttyS0 -> /dev/mouse

2000-12-08  Alexander Larsson  <alla@lysator.liu.se>

	* gdk/linux-fb/gdkfont-fb.c (gdk_fontset_load):
	Added dummy gdk_fontset_load.

2000-12-08  Alexander Larsson  <alexl@redhat.com>
